--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,34 +9,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SoundPressureLevelMeter">
-        <!--CalibrationActivity's orientation should be set to "landscape" at all times if possible-->
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings"
+            android:screenOrientation="unspecified" />
+        <!-- CalibrationActivity's orientation should be set to "landscape" at all times if possible -->
         <activity
             android:name=".CalibrationActivity"
-            android:label="@string/button_calibration_name"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false"
-            android:screenOrientation="landscape"
-            android:configChanges="keyboardHidden|orientation|screenSize"/>
-        <!--RawDataActivity's orientation should be set to "landscape" at all times if possible-->
+            android:label="@string/button_calibration_name"
+            android:screenOrientation="landscape" /> <!-- RawDataActivity's orientation should be set to "landscape" at all times if possible -->
         <activity
             android:name=".RawDataActivity"
-            android:label="@string/button_raw_data_graph_name"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false"
-            android:screenOrientation="landscape"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
-        <!--SPLMeterActivity's orientation should be set to "landscape" at all times if possible-->
+            android:label="@string/button_raw_data_graph_name"
+            android:screenOrientation="landscape" /> <!-- SPLMeterActivity's orientation should be set to "landscape" at all times if possible -->
         <activity
             android:name=".SPLMeterActivity"
-            android:label="@string/button_spl_meter_name"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false"
-            android:screenOrientation="landscape"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
-        <!--SPLGraphActivity's orientation should be set to "landscape" at all times if possible-->
+            android:label="@string/button_spl_meter_name"
+            android:screenOrientation="landscape" /> <!-- SPLGraphActivity's orientation should be set to "landscape" at all times if possible -->
         <activity
             android:name=".SPLGraphActivity"
-            android:label="@string/button_spl_graph_name"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false"
-            android:screenOrientation="landscape"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
+            android:label="@string/button_spl_graph_name"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
