--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,25 +21,25 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false"
             android:label="@string/button_calibration_name"
-            android:screenOrientation="landscape" /> <!-- RawDataActivity's orientation should be set to "landscape" at all times if possible -->
+            android:screenOrientation="landscape" /> <!-- CalibrationActivity's orientation should be set to "landscape" at all times if possible -->
         <activity
             android:name=".RawDataActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false"
             android:label="@string/button_raw_data_graph_name"
-            android:screenOrientation="landscape" /> <!-- SPLMeterActivity's orientation should be set to "landscape" at all times if possible -->
+            android:screenOrientation="landscape" /> <!-- RawDataActivity's orientation should be set to "landscape" at all times if possible -->
         <activity
             android:name=".SPLMeterActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false"
             android:label="@string/button_spl_meter_name"
-            android:screenOrientation="landscape" /> <!-- SPLGraphActivity's orientation should be set to "landscape" at all times if possible -->
+            android:screenOrientation="landscape" /> <!-- SPLMeterActivity's orientation should be set to "landscape" at all times if possible -->
         <activity
             android:name=".SPLGraphActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false"
             android:label="@string/button_spl_graph_name"
-            android:screenOrientation="landscape" />
+            android:screenOrientation="landscape" /> <!-- SPLGraphActivity's orientation should be set to "landscape" at all times if possible -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
